Whitespace style corrected

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,7 @@
   border-radius: 50%;
   margin-right: 10px;
 }
+
+.post-content-text {
+  white-space: pre;
+}
